agregando search producto

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -11,6 +11,8 @@ Home=Home
 Add=Agregar
 Maintenance=Maintenance
 AppName=voes
+Sale=venta
+Select=selecionar
 
 MovCreated=Mov was successfully created.
 MovUpdated=Mov was successfully updated.
@@ -106,7 +108,7 @@ CreateMovDetLabel_iva=Iva:
 CreateMovDetTitle_iva=Iva
 CreateMovDetLabel_total=Total:
 CreateMovDetTitle_total=Total
-CreateMovDetLabel_codProd=CodProd:
+CreateMovDetLabel_codProd=Producto:
 CreateMovDetTitle_codProd=CodProd
 EditMovDetTitle=Edit MovDet
 EditMovDetSaveLink=Save
@@ -236,6 +238,7 @@ ViewProductoTitle_maxExistencia=MaxExistencia
 ViewProductoLabel_minExistencia=MinExistencia:
 ViewProductoTitle_minExistencia=MinExistencia
 ListProductoTitle=List
+Product_Properties= Procucto Propiedades
 ListProductoEmpty=(No Producto Items Found)
 ListProductoDestroyLink=Destroy
 ListProductoEditLink=Edit
