--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -13,6 +13,10 @@ Maintenance=Maintenance
 AppName=voes
 Sale=venta
 Select=selecionar
+Efectivo=efectivo
+Credito=credito
+Cheque=cheque
+Puntos=puntos
 
 MovCreated=Mov was successfully created.
 MovUpdated=Mov was successfully updated.
