fix factura 6 cambio

--- a/src/java/Bundle.properties
+++ b/src/java/Bundle.properties
@@ -19,6 +19,7 @@ Cheque=Cheque
 Punto=Punto
 Vale=Vale
 Transferencia=Transferencia
+Cambio=Cambio
 
 MovCreated=Mov was successfully created.
 MovUpdated=Mov was successfully updated.
